# cppcc

./: .gitignore  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: .gitignore  Makefile  Makefile.am  Makefile.in  allocate_3d_array.c  allocate_3d_double_array.c  allocate_3d_float_array.c  check_inputs_are_reasonable.c  cppcc  cppcc.c  cppcc.h  free_3d_array.c  is_positive_integer.c  multi-threaded_allocate_3d_double_array.c  multi-threaded_allocate_3d_float_array.c  set_initial_voltages.c  set_initial_voltages_on_3D_double_array.c  set_initial_voltages_on_3D_float_array.c  set_voltages_for_capacitor_plates_double.c  set_voltages_for_capacitor_plates_float.c  usage_cppcc.c
src/.deps/: Pt100_resistance_to_temperature.Po  allocate_3d_array.Po  append_gpib_commands.Po  calkit.Po  capacitance.Po  check_command_line_arguments_are_ok.Po  circcap.Po  cppcc.Po  find_current_calibration_kit.Po  floppy.Po  gpiberr.Po  initialize.Po  milli_and_microsecond_delay.Po  mygetopt.Po  output.Po  output_data.Po  output_general_parameters.Po  output_receivers.Po  ppcc.Po  ppccc.Po  print_calkit_help.Po  print_floppy_help.Po  print_help.Po  read_binary_string.Po  read_double.Po  read_float.Po  read_string.Po  set_frequency.Po  t_check.Po  usage_cppcc.Po  usage_ppcc.Po  usage_ppccc.Po  vna.Po  vna.Tpo
