bin_PROGRAMS = cppcc 

cppcc_SOURCES = cppcc.c allocate_3d_double_array.c allocate_3d_float_array.c \
usage_cppcc.c check_inputs_are_reasonable.c set_initial_voltages_on_3D_double_array.c \
set_initial_voltages_on_3D_float_array.c is_positive_integer.c \
set_voltages_for_capacitor_plates_double.c 
# multi-threaded_allocate_3d_double_array.c  multi-threaded_allocate_3d_float_array.c

